--- a/src/frontend/src/pages/Game/Overlay/overlay.css
+++ b/src/frontend/src/pages/Game/Overlay/overlay.css
@@ -7,7 +7,7 @@
 .top-overlay {
     display: flex;
     align-items: center;
-    max-height: 10%;
+    max-height: 15%;
     padding-bottom: 10%;
     padding-inline: 16px;
     padding-top: 8px;
@@ -63,7 +63,7 @@
 
 .top-overlay__middle__cooldown {
     flex: 1;
-    color: #cccccc;
+    color: #00fff0;
 }
 
 .top-overlay__middle__bucket-points-container {
