Ctf test appears

--- a/src/frontend/src/pages/Game/Overlay/overlay.css
+++ b/src/frontend/src/pages/Game/Overlay/overlay.css
@@ -74,8 +74,8 @@
 }
 
 .top-overlay__right {
-    flex: 1;
     display: flex;
+    flex-wrap: wrap;
     justify-content: right;
     height: 80%;
 }
