Test element clickable

--- a/src/frontend/src/pages/Game/Overlay/overlay.css
+++ b/src/frontend/src/pages/Game/Overlay/overlay.css
@@ -136,3 +136,15 @@
     z-index: 1;
     pointer-events: none;
 }
+
+/* CTF */
+.ctf-icon {
+  position: absolute;
+  bottom: 0;
+  justify-content: left;
+  pointer-events: all;
+}
+
+.ctf-icon:hover {
+  cursor: pointer;
+}
