--- a/src/frontend/src/components/notification.css
+++ b/src/frontend/src/components/notification.css
@@ -1,14 +1,11 @@
-.error_notification {
+.notification {
   justify-self: center;
   min-width: 25vw;
   border-width: 0;
   border-radius: 15px;
 
 
-  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
-    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #925d67 0 -3px 0 inset;
 
-  background-color: rgb(221, 114, 114);
 
   max-height: 7vh;
   display: grid;
@@ -23,4 +20,16 @@
   padding: 15px;
   margin-right: 15px;
   margin-bottom: 15px;
+}
+
+.error {
+  background-color: rgb(221, 114, 114);
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #925d67 0 -3px 0 inset;
+}
+
+.success {
+  background-color: green;
+  box-shadow: limegreen 0 2px 4px,
+    limegreen 0 7px 13px -3px, lightgreen 0 -3px 0 inset;
 }
