--- a/src/frontend/src/pages/Game/Overlay/overlay.css
+++ b/src/frontend/src/pages/Game/Overlay/overlay.css
@@ -1,7 +1,13 @@
 /* Top Overlay */
 
 .top-gradient {
-    background: linear-gradient(0, rgba(0, 0, 0, 0) 0%, rgba(241, 241, 241, 0.775) 25%, rgba(223, 223, 223, 0.875) 50%, #d9d9d9 100%);
+    background: linear-gradient(
+        0,
+        rgba(0, 0, 0, 0) 0%,
+        rgba(241, 241, 241, 0.775) 25%,
+        rgba(223, 223, 223, 0.875) 50%,
+        #d9d9d9 100%
+    );
 }
 
 .top-overlay {
