--- a/src/frontend/src/pages/Game/Overlay/overlay.css
+++ b/src/frontend/src/pages/Game/Overlay/overlay.css
@@ -6,9 +6,6 @@
 
 .top-overlay {
     display: flex;
-    align-items: center;
-    max-height: 15%;
-    padding-bottom: 10%;
     padding-inline: 16px;
     padding-top: 8px;
 }
@@ -95,35 +92,13 @@
 }
 
 .bottom-overlay {
+    overflow-x: auto;
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
-    max-height: 10%;
-    padding-bottom: 32px;
+    align-items: center;
     font-size: small;
-}
-
-.bottom-overlay__button {
-    aspect-ratio: 1;
-    padding: 8px;
-    height: 100%;
-    max-height: 100%;
-    max-width: 100%;
-    background: #75757580;
-    border: 5px solid #757575;
-    border-radius: 8px;
-    pointer-events: all;
-}
-
-.bottom-overlay__button__icon {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
-}
-
-.bottom-overlay__button__text {
-    width: 100%;
+    height: 25vh;
 }
 
 /* Overlay */
