--- a/src/frontend/src/components/Modal/modal.css
+++ b/src/frontend/src/components/Modal/modal.css
@@ -1,18 +1,20 @@
 .modal {
-    position: fixed;
+    display: flex;
+    position: absolute;
     z-index: 2;
-    padding-top: 100px;
-    left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
+    bottom: 0;
+    right: 0;
+    left: 0;
     overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgb(0, 0, 0, 0.4);
+}
+
+.closing {
+    animation: animateclose 0.4s ease !important;  /* Needs to match js animation! */
 }
 
 .modal-content {
-    position: relative;
     background-color: #fefefe;
     margin: auto;
     padding: 0;
@@ -21,31 +23,50 @@
     box-shadow:
         0 4px 8px 0 rgba(0, 0, 0, 0.2),
         0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
-    animation-name: animatetop;
-    animation-duration: 0.4s;
+    animation: animatetop 0.4s ease;
 }
 
 @-webkit-keyframes animatetop {
     from {
-        top: -300px;
-        opacity: 0;
+        transform: translateY(-200px);
+        filter: opacity(0%) blur(4px);
     }
     to {
-        top: 0;
-        opacity: 1;
+        transform: translateY(0px);
+        filter: opacity(100%) blur(0px);
     }
 }
 
 @keyframes animatetop {
     from {
-        top: -300px;
-        opacity: 0;
+        transform: translateY(-200px);
+        filter: opacity(0%) blur(4px);
     }
     to {
-        top: 0;
-        opacity: 1;
+        transform: translateY(0px);
+        filter: opacity(100%) blur(0px);
+    }
+}
+
+@-webkit-keyframes animateclose{
+    from {
+        transform: translateY(0px);
+        filter: opacity(100%) blur(0px);
+    }
+    to {
+        transform: translateY(-200px);
+        filter: opacity(0%) blur(4px);
+    }
+}
+
+@keyframes animateclose {
+    from {
+        transform: translateY(0px);
+        filter: opacity(100%) blur(0px);
+    }
+    to {
+        transform: translateY(-200px);
+        filter: opacity(0%) blur(4px);
     }
 }
 
