--- a/src/frontend/src/pages/Game/Overlay/overlay.css
+++ b/src/frontend/src/pages/Game/Overlay/overlay.css
@@ -1,24 +1,19 @@
 /* Top Overlay */
 
 .top-gradient {
-    background: linear-gradient(
-        0,
-        rgba(0, 0, 0, 0) 0%,
-        rgba(241, 241, 241, 0.775) 25%,
-        rgba(223, 223, 223, 0.875) 50%,
-        #d9d9d9 100%
-    );
+    background: linear-gradient(rgb(255 255 255) 0%, rgb(241 241 241 / 0%) 30%)
 }
 
 .top-overlay {
+    flex: 1;
     display: flex;
-    align-items: center;
     padding-bottom: 30px;
     padding-inline: 16px;
     padding-top: 8px;
 }
 
 .top-overlay__left {
+    transition: all 0.5s;
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -36,6 +31,7 @@
 }
 
 .top-overlay__score-container {
+    transition: all 0.5s;
     display: flex;
     gap: 4px;
 }
@@ -44,6 +40,7 @@
     width: fit-content;
     font-size: xx-small;
     padding: 8px;
+    pointer-events: all;
 }
 
 .top-overlay__middle {
@@ -111,17 +108,17 @@
 /* Bottom Overlay */
 
 .bottom-gradient {
-    background: radial-gradient(50% 50% at 50% 25%, #ffffff 0%, rgba(255, 255, 255, 0) 65.5%);
+    background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgba(1, 1, 1, 0.0) 70%);
 }
 
 .bottom-overlay {
+    flex: 1;
     overflow-x: auto;
     transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     font-size: small;
-    height: 25vh;
 }
 
 /* Overlay */
