--- a/src/frontend/src/pages/Game/Overlay/overlay.css
+++ b/src/frontend/src/pages/Game/Overlay/overlay.css
@@ -133,14 +133,44 @@
 
 .bottom-overlay__right__help {
   max-width: 120%;
-  height: 30%;
+    height: 30%;
   max-height: 120%;
   object-fit: contain;
   pointer-events: all;
 }
 
-/* Overlay */
+.bottom-overlay__middle {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+  align-items: end;
+    gap: 8px;
+    flex-direction: column;
+    position: relative;
+    height: 80%;
+    font-size: large;
+}
 
+.bottom-overlay__middle__powerup {
+    position: absolute;
+  bottom: 0;
+    margin: auto;
+    max-height: 115%;
+    max-width: 100%;
+    height: 30%;
+}
+
+
+.bottom-overlay__left {
+    transition: all 0.5s;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    font-size: x-small;
+}
+
+/* Overlay */
 .overlay {
   display: flex;
   flex-direction: column;
