--- a/src/frontend/src/pages/Game/Overlay/overlay.css
+++ b/src/frontend/src/pages/Game/Overlay/overlay.css
@@ -9,7 +9,7 @@
     display: flex;
     padding-bottom: 30px;
     padding-inline: 16px;
-    padding-top: 8px;
+    padding-top: 24px;
 }
 
 .top-overlay__left {
@@ -46,7 +46,7 @@
 .top-overlay__middle {
     flex: 1;
     display: flex;
-    justify-content: start;
+    justify-content: right;
     gap: 8px;
     flex-direction: column;
     position: relative;
@@ -65,19 +65,6 @@
     max-width: 100%;
 }
 
-.top-overlay__middle__bucket-points {
-    position: relative;
-    z-index: 1;
-    height: 100%;
-    padding-top: 30px;
-    color: #00fff0;
-    text-shadow:
-        -2px 2px #000000,
-        2px 2px #000000,
-        2px -2px #000000,
-        -2px -2px #000000;
-}
-
 .top-overlay__middle__cooldown {
     flex: 1;
     color: #00fff0;
@@ -91,34 +78,56 @@
 }
 
 .top-overlay__right {
-    flex: 1;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: right;
-    height: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: right;
+  align-items: center;
+  height: 45px;
+  text-align: start;
+  color: white;
 }
 
+.top-overlay__right__bucket {
+  margin: auto;
+  width: 42px;
+  padding-right: 16px;
+}
+
+.top-overlay__right__spans {
+  display: flex;
+  flex-direction: column;
+  z-index: 1;
+  height: 100%;
+  text-shadow:
+    -2px 2px #000000,
+    2px 2px #000000,
+    2px -2px #000000,
+    -2px -2px #000000;
+}
+
+
 .top-overlay__right__help {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
-    pointer-events: all;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  pointer-events: all;
 }
 
 /* Bottom Overlay */
 
 .bottom-gradient {
-    background: linear-gradient(0deg, rgb(255, 255, 255, 0.5) 0%, rgba(1, 1, 1, 0) 50%);
+  background: linear-gradient(0deg, rgb(255, 255, 255, 0.5) 0%, rgba(1, 1, 1, 0) 50%);
 }
 
 .bottom-overlay {
-    flex: 1;
-    overflow-x: auto;
-    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: flex-end;
-    font-size: small;
+  flex: 1;
+  overflow-x: auto;
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-end;
+  font-size: small;
 }
 
 .bottom-overlay__right {
@@ -133,7 +142,7 @@
 
 .bottom-overlay__right__help {
   max-width: 120%;
-    height: 30%;
+  height: 30%;
   max-height: 120%;
   object-fit: contain;
   pointer-events: all;
@@ -144,33 +153,33 @@
 }
 
 .bottom-overlay__middle {
-    flex: 1;
-    display: flex;
-    justify-content: center;
+  flex: 1;
+  display: flex;
+  justify-content: center;
   align-items: end;
-    gap: 8px;
-    position: relative;
-    height: 80%;
-    font-size: large;
+  gap: 8px;
+  position: relative;
+  height: 80%;
+  font-size: large;
 }
 
 .bottom-overlay__middle__powerup {
-    position: absolute;
-    bottom: 10px;
-    margin: auto;
-    max-height: 115%;
-    max-width: 100%;
-    height: 30%;
+  position: absolute;
+  bottom: 10px;
+  margin: auto;
+  max-height: 115%;
+  max-width: 100%;
+  height: 30%;
 }
 
 
 .bottom-overlay__left {
-    transition: all 0.5s;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    font-size: x-small;
+  transition: all 0.5s;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  font-size: x-small;
 }
 
 /* Overlay */
