--- a/src/frontend/src/components/Instructions/instructions.css
+++ b/src/frontend/src/components/Instructions/instructions.css
@@ -3,11 +3,8 @@
     color: white;
 
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 0;
-
-    overflow-x: hidden;
-    overflow-y: scroll;
 }
 
 .section-text {
@@ -25,12 +22,20 @@
     margin-bottom: 1vh;
 }
 
-@media only screen and (max-width: 600px) {
-    #instructions {
-        max-width: 80vw;
-        max-height: 80vh;
-    }
+.sponsor-container .icon {
+    margin-bottom: 1em;
+    width: 12em;
+}
+
+@media only screen and (max-width: 800px) {
     .section-text {
-        font-size: 12px;
+        font-size: 0.8em;
+    }
+    .sponsor-container {
+        font-size: small;
+    }
+    .sponsor-container .icon {
+        margin-bottom: 1em;
+        width: 8em;
     }
 }
