--- a/src/frontend/src/pages/Game/Overlay/overlay.css
+++ b/src/frontend/src/pages/Game/Overlay/overlay.css
@@ -3,9 +3,7 @@
 .top-overlay {
     flex: 1;
     display: flex;
-    padding-bottom: 2.5rem;
-    padding-inline: 1rem;
-    padding-top: 2rem;
+    margin: 0.5rem 1rem 0 1rem;
 }
 
 .top-overlay__left {
@@ -14,13 +12,8 @@
     display: flex;
     flex-direction: column;
     justify-content: left;
-    font-size: x-small;
     color: #ffffff;
-    text-shadow:
-        -2px 2px #000000,
-        2px 2px #000000,
-        2px -2px #000000,
-        -2px -2px #000000;
+    font-size: var(--font-small);
 }
 
 .top-overlay__score-title {
@@ -29,38 +22,31 @@
 }
 
 .top-overlay__scores-container {
-    padding-bottom: 8px;
+    padding-bottom: 1em;
 }
 
 .top-overlay__score-container {
     transition: all 0.5s;
     display: flex;
-    gap: 0.5rem;
+    gap: 1vh;
 }
 
 .top-overlay__score-button {
     width: fit-content;
-    font-size: xx-small;
-    padding: 8px;
+    padding: 1em;
     pointer-events: all;
-}
-
-.top-overlay__middle {
-    flex: 1;
-    display: flex;
-    justify-content: right;
-    gap: 0.5rem;
-    flex-direction: column;
-    position: relative;
-    font-size: large;
+    font-size: var(--font-x-small);
 }
 
 .top-overlay__right {
     flex: 1;
+    gap: 2vw;
     display: flex;
-    text-align: start;
-    justify-content: space-evenly;
+    justify-content: flex-end;
+    align-items: center;
+    height: fit-content;
     color: white;
+    font-size: var(--font-small);
 }
 
 .top-overlay__right__bucket {
@@ -72,42 +58,37 @@
     display: flex;
     flex-direction: column;
     z-index: 1;
-    text-shadow:
-        -2px 2px #000000,
-        2px 2px #000000,
-        2px -2px #000000,
-        -2px -2px #000000;
 }
 
 /* Bottom Overlay */
 
 .bottom-overlay {
     flex: 1;
-    overflow-x: auto;
+    overflow-y: hidden;
     transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s;
     display: flex;
     justify-content: space-evenly;
     align-items: flex-end;
-    font-size: small;
 }
 
 .bottom-overlay__right {
     flex: 1;
+    margin: 0.5rem 1rem 0 1rem;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: right;
-    align-items: end;
-    padding: 2%;
 }
 
 .bottom-overlay__right__help {
     object-fit: contain;
     pointer-events: all;
-    height: 4rem;
+    height: 4em;
+    margin-bottom: 5em;
+    margin-inline: auto;
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s;
 }
 
 .bottom-overlay__right__help:hover {
     cursor: pointer;
+    transform: scale(1.1);
 }
 
 .bottom-overlay__imgwrapper {
@@ -121,23 +102,26 @@
   cursor: pointer;
 }
 
-.bottom-overlay__middle {
-    flex: 1;
+.bottom-overlay__left {
+    flex: 5;
     display: flex;
+    transition: all 0.5s;
+    flex-direction: row;
     justify-content: center;
-    align-items: end;
-    gap: 0.5rem;
-    position: relative;
-    font-size: large;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
-.bottom-overlay__left {
-    transition: all 0.5s;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    font-size: x-small;
+.outlined-text {
+    text-shadow:
+        -2px 2px #000000,
+        2px 2px #000000,
+        2px -2px #000000,
+        -2px -2px #000000,
+        0px 2px #000000,
+        0px 2px #000000,
+        2px 0px #000000,
+        -2px 0px #000000;
 }
 
 /* Overlay */
@@ -149,6 +133,10 @@
     height: 100%;
     z-index: 1;
     pointer-events: none;
+
+    --font-x-small: 0.8em;
+    --font-small: 1em;
+    --font-medium: 1em;
 }
 
 /* CTF */
@@ -163,4 +151,16 @@
 
 .ctf-container {
     display: grid;
+}
+
+@media (max-width: 800px) {
+    .overlay {
+        --font-x-small: 0.65em;
+        --font-small: 0.8em;
+        --font-medium: 1em;
+    }
+    .bottom-overlay__right__help {
+        height: 3em;
+        margin-bottom: 3.5em;
+    }
 }
