Tweaked 'View All' view and formatted the UI just a bit

--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -66,6 +66,10 @@ button:focus-visible {
   image-rendering: pixelated;
 }
 
+.hide {
+    visibility: hidden;
+}
+
 @keyframes slide-in {
     from {
         transform: translateX(100%);
