Refactored animations to use event handlers instead of stupid manual timeout shite

--- a/src/frontend/src/components/Modal/modal.css
+++ b/src/frontend/src/components/Modal/modal.css
@@ -12,10 +12,12 @@
 
 .opening {
     animation: animatetop 0.4s ease;
+    animation-fill-mode: forwards;
 }
 
 .closing {
-    animation: animateclose 0.4s ease; /* Needs to match js animation! */
+    animation: animateclose 0.4s ease;
+    animation-fill-mode: forwards;
 }
 
 .modal-content {
