--- a/src/frontend/src/components/Instructions/instructions.css
+++ b/src/frontend/src/components/Instructions/instructions.css
@@ -22,6 +22,10 @@
     margin-bottom: 1vh;
 }
 
+.entry-image {
+    height: 12em;
+}
+
 .sponsor-container .icon {
     margin-bottom: 1em;
     width: 12em;
@@ -37,5 +41,8 @@
     .sponsor-container .icon {
         margin-bottom: 1em;
         width: 8em;
+    }
+    .entry-image {
+        height: 8em;
     }
 }
